--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+SC:ital,wght@0,100..900;1,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Arial", sans-serif;
     margin: 0;
-    line-height: 1.6;
+    line-height: 1.5;
     background-color: #fff;
     color: #222;
 }
@@ -21,54 +22,86 @@ header.hero {
 header.hero::before {
     content: "";
     position: absolute;
-    top: 0; left: 0;
+    top: 0; 
+    left: 0;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.45);
     z-index: 0;
 }
 
-.overlay {
-    position: relative;
-    z-index: 1;
+.overlay { 
+    position: relative; 
+    z-index: 1; 
 }
 
 .hero-text h1 {
+    font-family: "Roboto Condensed", sans-serif;
     font-size: 55px;
+    letter-spacing: 2px;
     margin: 10px 0;
 }
 
 .hero-text p {
     font-size: 20px;
     margin-bottom: 25px;
+    color: #f1faee;
 }
 
 nav ul {
     list-style: none;
-    padding: 0;
+    padding: 10px 20px;
+    display: inline-block;
+    background: rgba(255,255,255,0.1);
+    border-radius: 40px;
 }
 
-nav ul li {
-    display: inline-block;
-    margin: 0 12px;
+nav li {
+  display: inline-block;
+  margin: 0 15px;
 }
 
 nav a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
+  color: white;
+  text-decoration: none;
+  font-weight: 600;
+  padding: 8px 14px;
+  border-radius: 25px;
+  transition: background 0.3s, color 0.3s;
 }
 
-/*SECCIONES GENERALES*/
+nav a:hover {
+    background-color: #e63959;
+
+}
+
+/* SECCIONES GENERALES */
 section {
     padding: 60px 25px;
     max-width: 1000px;
     margin: auto;
 }
 
+section:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+
 h2 {
     text-align: center;
-    margin-bottom: 20px;
+    justify-content: center;
+    margin-bottom: 30px;
+    position:relative;
+}
+
+h2::after {
+    content: "";
+    display: block;
+    width: 120px;
+    height: 3px;
+    background: #e63959;
+    margin: 8px auto 0;
+    border-radius: 3px;
 }
 
 /*SECCION BIENVENIDOS*/
@@ -119,7 +152,7 @@ h2 {
 }
 
 .info-lateral h2 {
-    text-align: left;
+    text-align: center ;
     color: #111;
 }
 
@@ -173,19 +206,52 @@ h2 {
     margin: 6px 0;
 }
 
+.redes {
+    list-style: none;
+    display: flex; 
+    justify-content: center; 
+    gap: 25px;   
+    padding: 0;
+    margin-top: 15px;
+}
+
+.redes li {
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;         
+    background-color: #f1f1f1;  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease;
+    box-shadow: 0 3px 8px rgba(0,0,0,0.15);
+}
+
+.redes li:hover {
+    transform: scale(1.1);  
+}
+
 .redes a {
+    color: #494949;    
+    font-size: 25px;          
     text-decoration: none;
-    color: #333;
-    font-weight: bold;
+}
+
+.redes li:hover a {
+    color: rgb(0, 0, 0);              
 }
 
 /*PIE DE PAGINA*/
 footer {
-    background-color: #222;
-    color: white;
+    background: linear-gradient(90deg, #111, #222);
+    color: #f1f1f1;
     text-align: center;
-    padding: 20px;
+    padding: 25px;
     font-size: 14px;
+    letter-spacing: 0.5px;
+}
+footer p {
+    margin: 6px 0;
 }
 
 /*RESPONSIVE*/
