--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,18 @@ body {
 header.hero {
     background-image: url('https://github.com/bvelasquezp-BrigitteKarolay/Proyecto-Grupal/raw/main/IMAGEN%202%20GYM.png');
     background-size: cover;
-    background-position: center;
+    background-attachment: local;
+    height: 100dvh; 
+    width: 100%; 
+    background-position: center top;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: white;
     text-align: center;
-    padding: 140px 20px;
-    position: relative;
+    overflow: hidden;
 }
 
 header.hero::before {
@@ -33,19 +40,6 @@ header.hero::before {
 .overlay { 
     position: relative; 
     z-index: 1; 
-}
-
-.hero-text h1 {
-    font-family: "Roboto Condensed", sans-serif;
-    font-size: 55px;
-    letter-spacing: 2px;
-    margin: 10px 0;
-}
-
-.hero-text p {
-    font-size: 20px;
-    margin-bottom: 25px;
-    color: #f1faee;
 }
 
 nav ul {
@@ -97,7 +91,7 @@ h2 {
 h2::after {
     content: "";
     display: block;
-    width: 120px;
+    width: 100px;
     height: 3px;
     background: #e63959;
     margin: 8px auto 0;
@@ -120,7 +114,7 @@ h2::after {
 .bienvenida-texto h2 {
     font-size: 38px;
     color: #111;
-    text-align: left;
+    text-align: center;
 }
 
 .bienvenida-texto p {
@@ -196,35 +190,46 @@ h2::after {
 }
 
 /*CONTACTO*/
-.contacto, .redes {
+.contacto {
     list-style: none;
     padding: 0;
     text-align: center;
 }
 
-.contacto li, .redes li {
+.contacto li{
     margin: 6px 0;
 }
 
+/*PIE DE PAGINA*/
+footer {
+    background: #000000;
+    color: #f1f1f1;
+    text-align: center;
+    padding: 25px;
+    font-size: 14px;
+    letter-spacing: 0.5px;
+}
+
 .redes {
+    background-color: #000000;
     list-style: none;
     display: flex; 
     justify-content: center; 
     gap: 25px;   
     padding: 0;
-    margin-top: 15px;
+    margin-top: 10px;
 }
 
 .redes li {
     width: 55px;
     height: 55px;
     border-radius: 50%;         
-    background-color: #f1f1f1;  
+    background-color: #000000;  
     display: flex;
     align-items: center;
     justify-content: center;
     transition: all 0.3s ease;
-    box-shadow: 0 3px 8px rgba(0,0,0,0.15);
+    box-shadow: 0 3px 8px rgb(62, 62, 62);
 }
 
 .redes li:hover {
@@ -232,27 +237,28 @@ h2::after {
 }
 
 .redes a {
-    color: #494949;    
-    font-size: 25px;          
+    color: #9c9c9c;    
+    font-size: 30px;          
     text-decoration: none;
 }
 
 .redes li:hover a {
-    color: rgb(0, 0, 0);              
+    color: rgb(255, 255, 255);              
 }
 
-/*PIE DE PAGINA*/
-footer {
-    background: linear-gradient(90deg, #111, #222);
+#redes {
+    color: white;
+}
+
+.linea-div {
     color: #f1f1f1;
-    text-align: center;
-    padding: 25px;
-    font-size: 14px;
-    letter-spacing: 0.5px;
 }
+
 footer p {
-    margin: 6px 0;
+    margin-top: 4px;
+    margin-bottom: 4px; 
 }
+
 
 /*RESPONSIVE*/
 @media (max-width: 768px) {
