--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+SC:ital,wght@0,100..900;1,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 
 /* GENERAL */
 body {
-    font-family: "Poppins", sans-serif;
+    font-family: "Noto Sans TC", sans-serif;
+    font-style: oblique 15dg;
     margin: 0;
     line-height: 1.5;
     background-color: #fff;
-    color: #222;
+    color: #313131;
 }
 
 h2 {
@@ -77,7 +78,7 @@ header.hero {
     list-style: none;
     display: flex;
     margin: 0;
-    padding-right: 30px;
+    padding-right: 50px;
     gap: 40px;
 }
 
@@ -235,32 +236,44 @@ div.background::before {
 
 /* FOOTER */
 footer {
-    background: #000;
-    color: #f1f1f1;
+    background: #000000;
+    color: #ffffff;
     text-align: center;
-    padding: 25px;
+    padding: 15px;
     font-size: 14px;
+}
+
+
+section {
+    padding: 25px;
+}
+
+#redes p {
+    margin-bottom: 20px;
 }
 
 .redes {
     list-style: none;
     display: flex; 
     justify-content: center; 
-    gap: 25px;   
+    gap: 20px;   
     padding: 0;
     margin-top: 10px;
 }
 
+hr {
+    margin: 0;
+}
+
 .redes li {
-    width: 55px;
-    height: 55px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;         
-    background-color: #000;  
+    background-color: #ffffff;  
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: all 0.3s ease;
-    box-shadow: 0 3px 8px rgb(62, 62, 62);
+    box-shadow:#646464;
 }
 
 .redes li:hover {
@@ -268,17 +281,13 @@ footer {
 }
 
 .redes a {
-    color: #9c9c9c;    
-    font-size: 30px;          
+    color: #000000;    
+    font-size: 20px;          
     text-decoration: none;
 }
 
-.redes li:hover a {
-    color: #fff;              
-}
-
 /* RESPONSIVE */
-@media (max-width: 900px) {
+@media (max-width: 768px) {
     header.hero {
         font-size: 20px;
         display: flex;
