--- a/styles.css
+++ b/styles.css
@@ -121,18 +121,12 @@ div.background {
     align-items: center;
 }
 
-div.background::before {
-    content: "";
-    position: absolute;
-    top: 0; 
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.5);
-    z-index: 1;
+/* SECCIÓN BIENVENIDA */
+#inicio {
+    margin-top: 10px;
+    margin-bottom: 0px;
 }
 
-/* SECCIÓN BIENVENIDA */
 .bienvenida {
     display: flex;
     flex-wrap: wrap;
@@ -166,6 +160,11 @@ div.background::before {
 }
 
 /* NOSOTROS Y SERVICIOS */
+#nosotros-servicios {
+    margin-top: 10px;
+    margin-bottom: 0px;
+}
+
 .flex-seccion {
     display: flex;
     flex-wrap: wrap;
@@ -203,8 +202,14 @@ div.background::before {
 }
 
 /* ENTRENADORES */
+#entrenadores{
+    margin-top: 50px;
+    margin-bottom: 0px;
+}
+
 .bg-light {
     background-color: #f5f5f5;
+    padding-top: 30px;
 }
 
 .entrenadores {
@@ -243,8 +248,12 @@ footer {
     font-size: 14px;
 }
 
+#logo {
+    padding-top: 40px;
+    padding-bottom: 30px;
+}
 
-section {
+#redes{
     padding: 25px;
 }
 
