--- a/styles.css
+++ b/styles.css
@@ -296,7 +296,7 @@ hr {
 }
 
 /* RESPONSIVE */
-@media (max-width: 768px) {
+@media (max-width: 600px) {
     header.hero {
         font-size: 20px;
         display: flex;
@@ -304,6 +304,10 @@ hr {
         align-items: center;
         background-color: #000;
         padding: 10px 15px;
+    }
+
+    .hero-text h1 {
+        font-size: 20px;
     }
 
     .main-menu label {
@@ -371,3 +375,11 @@ hr {
     }
 }
 
+@media (min-width: 600px) and (max-width: 1024px) {
+    div.background {
+        width: 100%;
+        height: 40vh;
+        aspect-ratio: 16 / 9;
+        background-size: contain;
+    }
+}
